# scaledown

./: .gitignore  LICENSE  README.md  contributing.md  pyproject.toml  setup.py
.github/: prepare_nightly.py
.github/workflows/: mirror_nightly.yaml  nightly_push.yaml  nightly_push_to_pypi.yaml  push_to_pypi.yaml
examples/generic-prompt-optimisation/: rag_with_scaledown.ipynb
scaledown/: __init__.py  loader.py
scaledown/converter/: __init__.py  convert_to_onnx.py  convert_to_tf.py
scaledown/distillation/: __init__.py  knowledge_distillation.py
scaledown/models/: tensorflow_model.py
scaledown/quantization/: __init__.py  activation_quantization.py  quantization.py  weight_quantization.py
src/scaledown/: __init__.py  api.py
src/scaledown.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scaledown/cli/: commands.py
src/scaledown/models/: __init__.py  base_model.py  claude_model.py  llm_model.py  model_factory.py  model_registry.py
src/scaledown/optimization/: __init__.py  prompt_optimizers.py  token_optimizer.py
src/scaledown/styles/: __init__.py  default_styles.py  optimization_style.py  style.py  style_manager.py
src/scaledown/templates/: __init__.py  default_templates.py  template.py  template_manager.py
src/scaledown/tools/: __init__.py  llms.py  prompt_optimizer.py  prompts.py
tests/: interactive.py  test_model_loading.py  test_scaledown.py  test_tf_weight_quantization.py
