[project]
name = "scaledown"
version = "0.1.2"
authors = [
  { name="Soham Chatterjee", email="soham@scaldown.ai" },
]
description = "A Context Optimization Package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://scaledown.ai"
Issues = "https://github.com/scaledown-team/scaledown"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
